--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -19,6 +19,7 @@ AppliedDefaultGraphicsPerformance=Scalable
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/Online")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="OnlineGameMode")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="OnlineCharacter")
+bSmoothFrameRate=True
 
 [/Script/Engine.RendererSettings]
 r.Mobile.DisableVertexFog=True
