--- a/Online.uproject
+++ b/Online.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "4.27",
+	"EngineAssociation": "{DC290F26-4F35-5DFA-54A2-F88BB8322F18}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
